# outrage-trading-env

./: .gitignore  PKG-INFO  README.md  pyproject.toml  setup.py
outrage_trading_env/: __init__.py  outrage_trading_gym_env.py
outrage_trading_env/libs/: __init__.py  lib_getdata_modified.py
