[tool.poetry]
name = "outrage-trading-env"
version = "2.0.0"
description = "A gym-env to do trading (forex/stock/crypto) using reinforcement-learning"
authors = ["Lucas Monteiro <lucas.ma8338@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3"
numpy = "^1"
pandas = "^1"
gym = "^0"
sklearn = "^0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
